Handle with resilience unknown ebml elements

Fix #7884 and #7887 by implementing the first proposition.